--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -1,5 +1,10 @@
 @tailwind base;
 @tailwind components;
+
+body{
+  background-color: #121212;
+}
+
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
