--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body{
-    background-color: #121212;
+body {
+  background-color: #121212;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+}
+
+input {
+  outline: none;
+}
+.VueCarousel-dot-container, .VueCarousel-dot {
+  margin: 0px !important;
+}
+.VueCarousel-pagination{
+    outline: none !important;
 }
