--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -1,6 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+  h3 {
+    @apply text-lg;
+  }
+}
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 body {
   background-color: #121212;
 }
@@ -20,4 +37,15 @@ input {
 }
 .VueCarousel-pagination{
     outline: none !important;
+}
+
+::-webkit-scrollbar {
+  width: 10px; /* width of the entire scrollbar */
+}
+::-webkit-scrollbar-track {
+  background: none; /* color of the tracking area */
+}
+::-webkit-scrollbar-thumb {
+  background-color: #3b3b3b;
+  border-radius: 0.5rem;
 }
